--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
    <title>Meghna Shenoy - Personal Portfolio</title>
+  
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
@@ -433,7 +434,7 @@
                                <span class="fa fa-globe"></span>
                            </div>
                            <div class="text">
-                               <p><span>Website</span> <a href="#">yoursite.com</a></p>
+                               <p><span>Website</span> <a href="#">megshenoy6.github.io</a></p>
                            </div>
                        </div>
                    </div>
