--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
    <title>Meghna Shenoy - Personal Portfolio</title>
- 
+ <link rel="shortcut icon" href="images/logo.png" type="image/png">
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
@@ -21,7 +21,7 @@
    <link rel="stylesheet" href="css/flaticon.css">
    <link rel="stylesheet" href="css/style.css">
 </head>
-    <link rel="shortcut icon" href="assets/images/logo.png" type="image/png">
+    
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
   
   
