--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
    <title>Meghna Shenoy - Personal Portfolio</title>
- <link rel="shortcut icon" href="images/logo.png" type="image/png">
+ <link rel="shortcut icon" href="images/logo.png">
    <meta charset="utf-8">
    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
